--- a/WindowsService2/WindowsService2/App.config
+++ b/WindowsService2/WindowsService2/App.config
@@ -4,6 +4,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
+    <add key="FileDirectory" value="d:\cow_data"/>
+    <add key="BackupDirectory" value="d:\cow_data_backup"/>
     <add key="DbHelperProvider" value="MySql.Data.MySqlClient"/>
     <add key="DbHelperConnectionString" value="Database=test;Data Source=127.0.0.1;User Id=root;Password=123456;pooling=false;CharSet=utf8;port=3306"/>
   </appSettings>
